# modernstack

./: .gitignore  .vercelignore  Dockerfile  biome.jsonc  components.json  constants.ts  drizzle.config.ts  middleware.ts  middlware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  types.ts  vercel.json
.github/workflows/: deploy.yml
api/: Dockerfile  db.py  dependencies.py  index.py  main.py  pyproject.toml  routers.py  settings.py
api/modules/files/: services.py
api/modules/projects/: controllers.py  exceptions.py  models.py  schemas.py  services.py
api/modules/statements/: constant.py  controllers.py  enums.py  exceptions.py  llms.py  models.py  schemas.py  services.py
app/: globals.css  layout.tsx  page.tsx
app/new/: page.tsx
app/sign-in/: page.tsx
components/: global-file-drop-handler.tsx  motion-provider.tsx  query-provider.tsx  typed-link.tsx
components/icons/: github.tsx  google.tsx  logo.tsx  pdf.tsx
components/providers/: global-drop-provider.tsx
components/ui/: breadcrumb.tsx  button.tsx  context-menu.tsx  cross-project-confirmation.tsx  dialog.tsx  label.tsx  project-selector-dialog.tsx  separator.tsx  toast.tsx
hooks/: use-controlled-state.tsx  use-typed-router.tsx
lib/: fetch-client.ts  file-validation.ts  organization-shortcuts.ts
public/: upload-worker.js
server/: file-handlers.tsx  get-organization-redirect.ts  get-organizations.ts  get-projects.ts
stores/: toast-store.ts
utils/: auth-schema.ts  auth.ts  db.ts  env.ts
validators/: organization.ts  projects.ts
(+31 files in other folders)
