[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "boto3>=1.40.34",
    "fastapi[standard]>=0.116.2",
    "langchain-google-genai>=2.1.12",
    "langchain-mongodb>=0.7.0",
    "langchain-openai>=0.3.33",
    "pydantic-settings>=2.10.1",
    "qstash>=3.2.0",
    "redis>=6.4.0",
]
